--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "aws-sdk": "^2.596.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "aws-sdk": "^2.596.0",
+    "ngx-clipboard": "^12.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
