--- a/src/amplify/.config/project-config.json
+++ b/src/amplify/.config/project-config.json
@@ -1,17 +1,17 @@
 {
-    "projectName": "src",
+    "providers": [
+        "awscloudformation"
+    ],
+    "projectName": "SDP1",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
         "framework": "angular",
         "config": {
             "SourceDir": "src",
-            "DistributionDir": "dist/SDP1",
+            "DistributionDir": "dist/sdpapp",
             "BuildCommand": "npm.cmd run-script build",
             "StartCommand": "ng serve"
         }
-    },
-    "providers": [
-        "awscloudformation"
-    ]
+    }
 }
