--- a/amplify/backend/auth/sdp8af4d5e6/sdp8af4d5e6-cloudformation-template.yml
+++ b/amplify/backend/auth/sdp8af4d5e6/sdp8af4d5e6-cloudformation-template.yml
@@ -100,7 +100,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'sdp125a10f1f_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'sdp8af4d5e6_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -112,10 +112,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: sdp125a10f1f_role_external_id
+                sts:ExternalId: sdp8af4d5e6_role_external_id
       Policies: 
         - 
-          PolicyName: sdp125a10f1f-sns-policy
+          PolicyName: sdp8af4d5e6-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -161,7 +161,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: sdp125a10f1f_role_external_id
+        ExternalId: sdp8af4d5e6_role_external_id
     
   
   UserPoolClientWeb:
@@ -169,7 +169,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: sdp125a10f1f_app_clientWeb
+      ClientName: sdp8af4d5e6_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -179,7 +179,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: sdp125a10f1f_app_client
+      ClientName: sdp8af4d5e6_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -244,7 +244,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: sdp125a10f1f_userpoolclient_lambda_iam_policy
+      PolicyName: sdp8af4d5e6_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -261,7 +261,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: sdp125a10f1f_userpoolclient_lambda_log_policy
+      PolicyName: sdp8af4d5e6_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -301,7 +301,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'sdp125a10f1f_identitypool_25a10f1f', !Join ['',['sdp125a10f1f_identitypool_25a10f1f', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'sdp8af4d5e6_identitypool_8af4d5e6', !Join ['',['sdp8af4d5e6_identitypool_8af4d5e6', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
