--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,14 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ]
-            
           },
           "configurations": {
             "production": {
@@ -91,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -122,6 +125,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "sdpapp"
 }
