--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.5",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "aws-amplify": "^2.2.5",
     "aws-sdk": "^2.596.0",
     "bootstrap": "^4.4.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-clipboard": "^12.3.0",
     "ngx-qrcode2": "0.0.9",
