--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "aws-amplify": "^2.2.5",
     "aws-sdk": "^2.627.0",
     "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jszip": "^3.2.2",
+    "jszip-utils": "^0.1.0",
     "ngx-clipboard": "^12.3.0",
     "ngx-qrcode2": "0.0.9",
     "rxjs": "~6.4.0",
