--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "angular-google-charts": "^0.1.6",
     "angular-material": "^1.1.21",
     "aws-amplify": "^2.2.5",
     "aws-sdk": "^2.631.0",
